fix illustration position

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
-<body class="font-barlowCondensed font-normal relative">
-<div id="root" class="overflow-hidden"></div>
+<body class="font-barlowCondensed font-normal relative overflow-clip">
+<div id="root" class="overflow-clip"></div>
 <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
